--- a/.verb.md
+++ b/.verb.md
@@ -2,7 +2,7 @@
 
 > {%= description %}
 
-See the wikipedia [article on non-characters][wiki].
+See the wikipedia [article on non-characters][wiki]. Also, I used [regenerate](https://github.com/mathiasbynens/regenerate) from [mathiasbynens](https://github.com/mathiasbynens) to generate the range of characters. 
 
 {%= include("install-npm", {save: true}) %}
 
